@startuml

title __KEYLISTENERS's Class Diagram__\n

  namespace keylisteners {
      class keylisteners.GameEventListener {
          + GameEventListener()
          + keyPressed()
      }
      class keylisteners.PauseEventListener {
          + PauseEventListener()
          + keyPressed()
          + keyReleased()
      }
    }

  

  keylisteners.GameEventListener -up-|> java.awt.event.KeyAdapter
  keylisteners.PauseEventListener -up-|> java.awt.event.KeyAdapter
  ui.GamePanel o-- keylisteners.GameEventListener : gameEventListener
  ui.PausePanel o-- keylisteners.PauseEventListener : pauseEventListener


@enduml
